feat: implement gesture segmentation and model pipeline